...

struct ContentView: View {
    var body: some View {
        NavigationStack {
            List {
                Section {
                    Text("Kata Dōshi")
                        .font(.largeTitle)
                        .bold()
                    Text("Form Companion for Martial Artists")
                        .font(.caption)
                        .foregroundColor(.secondary)
                }
...
